assets/style.css
@import url('https://fonts.googleapis.com/css?family=Lato|Oswald&display=swap');
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');

/* common title for all pages */
header {
min-height:75px;
line-height: 75px;
}


h1  {
        font-family: Oswald;
        text-transform: uppercase;
        letter-spacing: 4px;
        color: white;
        font:200%;
        text-align:center;
    }

.logo a h1 { 

    font: 200%;
    text-align: center;
    line-height: 75px;
    color:white;
    clear:both;
}

.menu1 {
    font-size: 150%;
    list-style-type: none;
    letter-spacing: 4px;
    font-family: Lato;
    text-align: center;
}

.menu1 a {
        
        color:white;
        text-decoration: none; 
        }



.menu1 a:hover {
   border-bottom: 1px solid #777777;
}

.active {
    border-bottom: 1px solid #777777;
}

.theme {
    background-color:black;
    color:white;
}

/* image used on index page main section */
#hero-image {
    height:600px;
    width:100%;
    background: url("https://images.pexels.com/photos/2261477/pexels-photo-2261477.jpeg?cs=srgb&dl=active-athlete-barbell-2261477.jpg&fm=jpg")  no-repeat center center;
    object-fit:  scale-down;
    object-position: top;
    background-size: cover;
    animation-name: hero-zoom;
    animation-duration:3s;
    animation-fill-mode:forwards;
}

#hero-outer {
 height:600px;
 width: 100%;
 overflow:hidden;
 position:relative;
}

@keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1);
    }
}

/* text styling for founder quote */
#cover-text, #cover-text h2 {
    color: white;
    font-size: 10px;
    text-transform: uppercase;
    text-shadow: Oswald 0px 0px 1px,   Oswald 0px 0px 1px,   Oswald 0px 0px 1px,
             Oswald 0px 0px 1px,   Oswald 0px 0px 1px,   Oswald 0px 0px 1px;
}

#cover-text {
    font-size: 20px;
    font-family: Oswald;
    text-transform: uppercase;
    letter-spacing: 5px;
    width:300px;
    height:200px;
    padding-left: 20px;
    padding-top: 0px;
    bottom:100px;
    right:120px;
    color:white;
    position:absolute;
}


/* club ethos */ 
#club-ethos {
         height:300px;
}


/* used for Mission statement text */
#left-about {
    padding-top:15px;
    width:33%;
    float: left;
    color:white;
    text-align: center;
}

#right-about {
    padding-top:15px;
    width:33%;
    float: left;
    color:white;
    text-align: center;
}

#center-about {
    padding-top:15px;
    width:33%;
    float: left;
    color:white;
    text-align: center;
}

hr {
    border-bottom: 1px solid #777777;
    width:80%;
    margin: 5px .5;
    }

#mission {
    text-align: center;
    margin:20px 0;
    text-size-adjust: 200%;
}

#hl {
    border: 1px solid silver;
    width: 100%;
    margin: auto;
    margin-top: 5%;
    margin-bottom: 5%;
    background-color: silver;
    clear:both;
    }


/* bottom footer common to all pages */
footer {
min-height:150px;
/*background: url("https://images.pexels.com/photos/3153201/pexels-photo-3153201.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260") no-repeat center center; */
background-color:#757575;
background-size: cover;  
margin:0;   
}

.social-media {
    text-align:center;
}

.social-media li {
    list-style-type: none;
    text-align: center;
    clear:both;
    color:black;
}

.social-media p {
    color: black;
    clear:both;
    float: right;
    text-align: center;
    margin:1%;
}

.social-media li a {
    font-size: 100%;
    margin: 1%;
    text-align: center;
    float: center;
    color: black;
    clear:both;
    list-style-type: none;
}

/* google maps iframe input on contact page */
#gmap iframe {
    min-height 150px;
    width:100%;
    clear:both;
}



.photo {
    clear:both;
   
}

/* main section of contact us page w/ three photo layout */
.left-about-contact {
    height:600px;
    background-color:blue;
    background: url("https://images.pexels.com/photos/1552104/pexels-photo-1552104.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500") center no-repeat no-repeat;
    background-size: cover; 
}

.right-about-contact {
    height:600px;
    background-color:blue;
    background: url("https://images.pexels.com/photos/1886487/pexels-photo-1886487.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500") center no-repeat no-repeat;
    background-size: cover;         
}

.contact-center-image {
    
    min-height:600px;
    background-color:blue;
    background: url("https://images.pexels.com/photos/669584/pexels-photo-669584.jpeg?auto=compress&cs=tinysrgb&h=650&w=940") center no-repeat no-repeat;
    background-size: cover; 
    
}

/* testing at bottom of contact page to debug formatting */
.test {
    height: 300px;
    clear:both;
    
}

.test li {
    list-style-type: none;
    text-align:center;

    display: inline-block;
}

.test li a {
    color:black;
}

/* ----------------- timetable (tt) styles */

.tt-hl { 
    border: 1px solid silver;
    width: 100vw;;
    margin: auto;
    background-color: silver;
    clear:both;
}

.tt-oh {
    clear:both;
    line-height: 0;
    text-align: center;
    background: url("https://images.pexels.com/photos/669578/pexels-photo-669578.jpeg?auto=compress&cs=tinysrgb&h=650&w=940")  no-repeat center center;
    min-height:600px;
    background-size: cover;
    border: 5% solid white;
}

.tt-oh h1 {
    text-decoration: underline;
}

.tt-oh-s1 {
    padding-top: 3%;
    border-bottom-style: solid;
    border-bottom-color: white;
}

.tt-tt {
    Text-align: left;
    float: left;
}

.tt-text p {
    text-align:center;
    padding:20px;
}

.tt-text h4{
    text-align:center;
    font-size: 90%;
    margin: 10px;
}

/* Contact-Us Styles */
.center-form {
    padding-top: 40%;
    margin: 0 auto;
    min-width: 100%;
    
}

.contact-center-text {
    text-align: center;
    float:center;
}

.contact-center-text h2, .contact-center-text h4 { 
    text-align:center;
    float: center;
}

